Fixing some layout issues!

--- a/wp-content/themes/fhpress/style.full.less
+++ b/wp-content/themes/fhpress/style.full.less
@@ -486,7 +486,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@offwhite', e
 	display:inline;
 }
 .navigation ul.social-icons li a:link, .navigation ul.social-icons li a:visited {
-	padding:0px 0.25em;
+	padding:0px 0.1em;
 	font-size:0.75em;
 	border-bottom:0px none transparent;
 	transition:color 0.2s ease, opacity 0.2s ease;
@@ -520,6 +520,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@offwhite', e
 @media screen and (min-width:1100px) {
 	.main-navigation ul {
 		width:50%;
+	}
+	.navigation ul.social-icons li a:link, .navigation ul.social-icons li a:visited {
+		padding:0px 0.25em;
 	}
 }
 
@@ -629,6 +632,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@offwhite', e
 	.home .header {
 		min-height:50vh;
 		height:50vh;
+		max-height:600px;
 	}
 	.home .header .bg {
 		top:-10vh;
@@ -666,9 +670,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@offwhite', e
 	.home .header {
 		min-height:70vh;
 		height:70vh;
+		max-height:800px;
 	}
 	.home .header .row .col {
 		height:70vh;
+		max-height:800px;
 		padding:10vh 5vw;
 	}
 }
